replaced icon font with svg icons

--- a/web/app/themes/huskies-theme/styles/common/buttons.less
+++ b/web/app/themes/huskies-theme/styles/common/buttons.less
@@ -1,8 +1,8 @@
 .button {
   background-color: @c-black;
   color: @c-white;
-  padding: 0 0.7rem;
-  line-height: 3rem;
+  padding: 0 15px;
+  line-height: 50px;
   font-size: @fs-l;
   cursor: pointer;
   text-decoration: none;
