--- a/web/app/themes/huskies-theme/styles/common/mixins.less
+++ b/web/app/themes/huskies-theme/styles/common/mixins.less
@@ -4,10 +4,9 @@
   margin-right: auto;
 }
 
-.icon(@color: @c-white) {
+.icon_link(@color: @c-white) {
   cursor: pointer;
   color: @color;
-  transition: color .3s ease;
 
   &:hover {
     color: darken(@color, 10%);
