--- a/web/app/themes/huskies-theme/styles/common/typography.less
+++ b/web/app/themes/huskies-theme/styles/common/typography.less
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Nothing+You+Could+Do|Lato:400,100);
+
 h1 {
   font-family: @f-highlight;
   font-size: @fs-xxl;
