--- a/web/app/themes/huskies-theme/views/macro.twig
+++ b/web/app/themes/huskies-theme/views/macro.twig
@@ -22,3 +22,7 @@
     {% endfor %}
   </nav>
 {% endmacro %}
+
+{% macro icon(name) %}
+  <svg class="icon icon--{{ name }}"><use xlink:href="#icon-{{ name }}"></use></svg>
+{% endmacro %}
