--- a/web/app/themes/huskies-theme/styles/footer.less
+++ b/web/app/themes/huskies-theme/styles/footer.less
@@ -43,9 +43,13 @@ footer {
   margin-right: 7%;
 
   > a {
-    .icon(@c-white);
+    .icon_link(@c-white);
     text-decoration: none;
-    font-size: 50px;
+  }
+
+  .icon {
+    width: 50px;
+    height: 50px;
   }
 }
 
