--- a/web/app/themes/huskies-theme/views/layout/header.twig
+++ b/web/app/themes/huskies-theme/views/layout/header.twig
@@ -1,11 +1,13 @@
+{% from 'macro.twig' import icon %}
+
 <nav class="header__mobile clear">
-  <span class="icon-menu pull-left main_menu__toggle"></span>
+  <span class="header__links pull-left main_menu__toggle">{{ icon('menu') }}</span>
   <a href="{{ site.url }}" class="header__mobile-logo">
     <svg><use xlink:href="#logo-font" width="100%" height="100%"></use></svg>
   </a>
   {% if page.user.logged_in %}
     <a class="icon-custom-user pull-right" href="{{ page.user.profile.url }}">{{ page.user.profile.image }}</a>
   {% else %}
-    <a class="icon-paw pull-right" href="{{ page.login_url }}"></a>
+    <a class="header__links pull-right" href="{{ page.login_url }}">{{ icon('paw') }}</a>
   {% endif %}
 </nav>
