add basic design for forum, topic and reply pages

--- a/web/app/themes/huskies-theme/styles/buttons.less
+++ b/web/app/themes/huskies-theme/styles/buttons.less
@@ -1,8 +1,8 @@
 .button {
   background-color: @c-black;
   color: @c-white;
-  padding: 0 15px;
-  line-height: 50px;
+  padding: 0 10px;
+  line-height: 2.2;
   font-size: @fs-l;
   cursor: pointer;
   text-decoration: none;
