--- a/web/app/themes/huskies-theme/styles/variables.less
+++ b/web/app/themes/huskies-theme/styles/variables.less
@@ -2,6 +2,7 @@
 @c-black: #50514F;
 @c-white: #FFFFFF;
 @c-grey: #F4F5F7;
+@c-grey-dark: darken(@c-grey, 15);
 
 @f-highlight: 'Nothing You Could Do', cursive;
 @f-normal: 'Lato', sans-serif;
