--- a/web/app/themes/huskies-theme/views/layout/forum.twig
+++ b/web/app/themes/huskies-theme/views/layout/forum.twig
@@ -3,14 +3,17 @@
 {% block header %}
   <div class="slideshow slideshow--no-images">
     <h1 class="slideshow__title">
-      {% block forum_headline %}{% endblock %}
+      {% block forum_title %}{% endblock %}
     </h1>
   </div>
 {% endblock %}
 
 {% block content %}
+  {% block forum_header %}{% endblock %}
+
   <section class="section">
-    {{ page.bbpress.breadcrumb }}
     {% block forum_content %}{% endblock %}
   </section>
+
+  {% block forum_footer %}{% endblock %}
 {% endblock %}
