add modal to forms

--- a/web/app/themes/huskies-theme/styles/buttons.less
+++ b/web/app/themes/huskies-theme/styles/buttons.less
@@ -26,4 +26,15 @@
       border-color: @c-blue;
     }
   }
+
+  &.button--secondary {
+    background-color: transparent;
+    color: @c-black;
+    border-color: @c-black;
+
+    &:hover {
+      color: @c-blue;
+      border-color: @c-blue;
+    }
+  }
 }
