--- a/web/app/themes/huskies-theme/styles/index.less
+++ b/web/app/themes/huskies-theme/styles/index.less
@@ -111,6 +111,7 @@ main {
   }
 }
 
+@import "title";
 @import "simple_calendar";
 @import "main_menu";
 @import "pagination";
@@ -124,3 +125,5 @@ main {
 @import "breadcrumb";
 @import "forum";
 @import "reply";
+@import "modal";
+@import "form";
