--- a/web/app/themes/huskies-theme/views/layout/base.twig
+++ b/web/app/themes/huskies-theme/views/layout/base.twig
@@ -54,6 +54,8 @@
       </footer>
     </div>
 
+    {% block modal %}{% endblock %}
+
     {{ function('wp_footer') }}
     {% include 'images/logo.svg' %}
     {% include 'images/icons.svg' %}
