--- a/web/app/themes/huskies-theme/views/forum/forms/upload.twig
+++ b/web/app/themes/huskies-theme/views/forum/forms/upload.twig
@@ -1,18 +1,28 @@
-<p>{{ __('Maximum file size allowed is %s KiB', 'huskies')|format(forum.max_file_size) }}</p>
-<p>{{ __('Maximum amount of upload files is %s')|format(forum.max_to_upload) }}</p>
+{% from 'macro.twig' import icon %}
 
-<div class="bbp-attachments-form">
-  <div class="file-wrapper">
-    <input type="file" name="d4p_attachment[]" />
-    <span class="btn">{{ __('Choose', 'huskies') }}</span>
-    <span class="file_chosen uneditable-input"></span>
+<p class="form__infos form__infos--hidden form__infos--hideable">
+  {{ __('You can upload up to <strong>%s</strong> files with a maximum amount of <strong>%s</strong> KiB for each file.', 'huskies')|format(forum is defined ? forum.max_to_upload : topic.max_to_upload, forum is defined ?  forum.max_file_size : topic.max_file_size) }}
+</p>
+
+<button type="button" class="form__upload--new-file">
+  {{ icon('plus-circle') }}
+  {{ __("File", "huskies") }}
+</button>
+
+<div class="form__upload--area">
+  <div class="form__upload">
+    <input type="file" name="d4p_attachment[]" style="display: none;"/>
+    <button type="button" class="button button--secondary form__upload--button">
+      {{ __('Choose File', 'huskies') }}
+    </button>
   </div>
 </div>
-<a class="d4p-attachment-addfile" href="#">{{ __("Add another file", "huskies") }}</a>
-<div class="file-template" style="display: none;">
-  <div class="file-wrapper">
-    <input type="file" name="d4p_attachment[]" />
-    <span class="btn">{{ __('Choose', 'huskies') }}</span>
-    <span class="file_chosen uneditable-input"></span>
+
+<div class="form__upload--template" style="display: none;">
+  <div class="form__upload">
+    <input type="file" name="d4p_attachment[]" style="display: none;"/>
+    <button type="button" class="button button--secondary form__upload--button">
+      {{ __('Choose File', 'huskies') }}
+    </button>
   </div>
 </div>
