--- a/web/app/themes/huskies-theme/views/forum/replies.twig
+++ b/web/app/themes/huskies-theme/views/forum/replies.twig
@@ -1,13 +1,15 @@
 {% extends "layout/forum.twig" %}
-{% from 'macro.twig' import pagination, header_top_link, icon %}
+{% from 'macro.twig' import pagination, header_top_link, icon, modal %}
 
 {% block forum_title %}
   {{ __('Replies', 'huskies') }}
 {% endblock %}
 
-{% block header_top_link %}
-  {{ header_top_link('plus', '') }}
-{% endblock %}
+{% if page.user.can.access_reply_form %}
+  {% block header_top_link %}
+    {{ header_top_link('plus', '#modal') }}
+  {% endblock %}
+{% endif %}
 
 {% block forum_header %}
   <section class="section section--inverse">
@@ -84,12 +86,12 @@
           {{ topic.favorite_link }}
         </span>
       </div>
-
-      {% if page.user.can.access_reply_form %}
-        {% include 'forum/forms/reply.twig' %}
-      {% else %}
-        {{ __('The Topic "%s" is closed to new replies', 'huskies')|format(topic.title) }}
-      {% endif %}
     </footer>
   </section>
 {% endblock %}
+
+{% if page.user.can.access_reply_form %}
+  {% block modal %}
+    {{ modal('reply-form', __('Reply To: %s', 'huskies')|format(topic.title), include('forum/forms/reply.twig')) }}
+  {% endblock %}
+{% endif %}
