--- a/web/app/themes/huskies-theme/views/forum/topic_edit.twig
+++ b/web/app/themes/huskies-theme/views/forum/topic_edit.twig
@@ -1,6 +1,6 @@
 {% extends "layout/forum.twig" %}
 
-{% block forum_headline %}
+{% block forum_title %}
   {{ __('Now Editing "%s"', 'huskies')|format(topic.title) }}
 {% endblock %}
 
